Reads and displays body/crypt in characters

--- a/Encrypt/Encrypt.vcxproj.filters
+++ b/Encrypt/Encrypt.vcxproj.filters
@@ -21,12 +21,15 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Binary.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Encrypt.cpp">
+    <ClCompile Include="Crypt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
