Prints out crypt/body in binary

--- a/Encrypt/Encrypt.vcxproj.filters
+++ b/Encrypt/Encrypt.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="Crypt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Binary.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
