--- a/Encrypt/Encrypt.vcxproj.filters
+++ b/Encrypt/Encrypt.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Matchings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IntArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Matchings.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IntArray.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
