Middle function works

--- a/Encrypt/Encrypt.vcxproj
+++ b/Encrypt/Encrypt.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="Binary.h" />
     <ClInclude Include="IntArray.h" />
+    <ClInclude Include="MatchHeap.h" />
     <ClInclude Include="Matchings.h" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +160,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="IntArray.c" />
+    <ClCompile Include="MatchHeap.c" />
     <ClCompile Include="Matchings.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
