--- a/Encrypt/Encrypt.vcxproj.filters
+++ b/Encrypt/Encrypt.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="IntArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MatchHeap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Crypt.c">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IntArray.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MatchHeap.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
